# loader

./: .gitmodules  CMakeLists.txt  README.md
client/: client.sln  client.vcxproj  client.vcxproj.filters
client/src/: main.cpp
client/src/client/: client.h  packet.h
client/src/security/: security.cpp
client/src/ui/: ui.cpp
client/src/util/: events.h  io.h  util.cpp
server/src/: main.cpp
server/src/client/: client.h
server/src/server/: packet.h  server.cpp
